[package]
name = "warkov-wordgen"
version = "0.2.0"
authors = ["Amanda McCann <rory@technomancy.org>"]
license = "AGPL-3.0+"
repository = "https://github.com/amandasaurus/warkov"
description = "Use markov-chains to generate new items"
edition = "2021"


[dependencies]
warkov = "0.1"
clap = { version = "3.2.18", features = ["derive"] }
anyhow = "1.0.62"
